test/type-error-4.err.expect
test/type-error-4.ktn:1:1: error: cannot solve scalar type constraint t1? = [t2 (type var a of foo)] (input to foo)
test/type-error-4.ktn:1:9: note: [t2 (type var a of foo)] (input to foo) is from here
test/type-error-4.ktn:2:10: note: t1 is from here
